--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ html::-webkit-scrollbar-thumb {
   top: 0;
   left: 0;
   z-index: 10000;
-  background: #e6eff1;
+  background: #036e86;
   display: flex;
   align-items: center;
   justify-content: center;
